# solana-sss2-typescript-sdk

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  EXAMPLES.md  IMPLEMENTATION_STATUS.md  README.md  TODO.md  anchor-package.json  deploy.sh  erros.md  package-lock.json  package.json  resumo_erros.md  verify-code.sh  verify-syntax.sh
docs/: CODE_REVIEW_FIXED.md  FINAL_CODE_REVIEW_REPORT.md  FINAL_TEST_REPORT.md  PLANO_B_EXECUCAO.md  PLANO_B_TRANSFER_HOOK.md  PROGRESSO_SSS2_BOUNTY.md  SOLANA_FINAL_PROGRESS_CORRECTED.md  STATUS_DETAHADO_SSS2_BOUNTY.md  TOKEN2022_MIGRATION_PROGRESS_1.md  solana-stablecoin-standard-implementation-progress.md
programs-backup/solana-stablecoin-standard/src/: lib.rs  mod.rs  stablecoin.rs
programs/solana-stablecoin-standard/programs/: mod.rs
programs/solana-stablecoin-standard/src/: lib.rs  stablecoin.rs
src/sdk/: stablecoin.ts
tests/: stablecoin.ts
